feat: add rswag spec for filter_by_mask_conditions API
